2009-04-16  Lillian Angel  <langel@redhat.com>

	* HACKING: Updated.
	* Makefile.am: Updated to b16 bundle.
	(ICEDTEA_PATCHES): Removed unneeded patches 
	(icedtea.stamp): fixed build path.
	(icedtea-ecj.stamp): Likewise.
	* patches/ecj/icedtea.patch: Fixed path.
	* patches/icedtea-bytebuffer-compact.patch: Updated.
	* patches/icedtea-core-build.patch: Fixed path.
	* patches/icedtea-jdk-docs-target.patch: Fixed path.
	* patches/icedtea-shark-build.patch: Fixed path.
	* patches/icedtea-version.patch: Updated
	* patches/icedtea-display-mode-changer.patch, 
	patches/icedtea-io_util-overflow.patch,
	patches/security/icedtea-6536193.patch,
	patches/security/icedtea-6610888.patch,
	patches/security/icedtea-6610896.patch,
	patches/security/icedtea-6630639.patch,
	patches/security/icedtea-6632886.patch,
	patches/security/icedtea-6636360.patch,
	patches/security/icedtea-6652463.patch,
	patches/security/icedtea-6656633.patch,
	patches/security/icedtea-6658158.patch,
	patches/security/icedtea-6691246.patch,
	patches/security/icedtea-6717680.patch,
	patches/security/icedtea-6721651.patch,
	patches/security/icedtea-6737315.patch,
	patches/security/icedtea-6792554.patch,
	patches/security/icedtea-6804996.patch,
	patches/security/icedtea-6804997.patch,
	patches/security/icedtea-6804998.patch: Removed.

2009-04-16  Omair Majid  <omajid@redhat.com>

	* patches/hotspot/default/icedtea-ignore-unrecognized-options.patch: New
	file. Adds -XX:+IgnoreUnrecognizedVMOptions flag to hotspot.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2009-04-15  Gary Benson  <gbenson@redhat.com>
	    Xerxes Rånby <xerxes@zafena.se>

	* patches/icedtea-zero.patch (BytecodeInterpreter::run):
	Skip a bad assertion on IA32 with Zero.

2009-04-10 Deepak Bhole <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Fix rhbz478561 (freeze with empty string return from
	Java side).
	* plugin/icedtea/sun/applet/PluginMessageConsumer.java: Bump max workers