@@ -1,3 +1,8 @@
+2009-04-17  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am
+	(icedtea-ecj.stamp): Fixed makefile path.
+
 2009-04-16  Lillian Angel  <langel@redhat.com>
 
 	* HACKING: Updated.
